syntax = "proto3";

package transcode.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/narwhalmedia/narwhal/api/proto/transcode/v1;transcodev1";

// Transcode service manages the transcoding of media files
service TranscodeService {
  // Transcode operations
  rpc CreateTranscodeJob(CreateTranscodeJobRequest) returns (TranscodeJob) {
    option (google.api.http) = {
      post: "/v1/jobs"
      body: "*"
    };
  }
  rpc GetTranscodeJob(GetTranscodeJobRequest) returns (TranscodeJob) {
    option (google.api.http) = {
      get: "/v1/jobs/{id}"
    };
  }
  rpc ListTranscodeJobs(ListTranscodeJobsRequest) returns (ListTranscodeJobsResponse) {
    option (google.api.http) = {
      get: "/v1/jobs"
    };
  }
  rpc CancelTranscodeJob(CancelTranscodeJobRequest) returns (TranscodeJob) {
    option (google.api.http) = {
      post: "/v1/jobs/{id}/cancel"
    };
  }
  rpc DeleteTranscodeJob(DeleteTranscodeJobRequest) returns (DeleteTranscodeJobResponse) {
    option (google.api.http) = {
      delete: "/v1/jobs/{id}"
    };
  }

  // Preset operations
  rpc CreatePreset(CreatePresetRequest) returns (Preset) {
    option (google.api.http) = {
      post: "/v1/presets"
      body: "*"
    };
  }
  rpc GetPreset(GetPresetRequest) returns (Preset) {
    option (google.api.http) = {
      get: "/v1/presets/{id}"
    };
  }
  rpc ListPresets(ListPresetsRequest) returns (ListPresetsResponse) {
    option (google.api.http) = {
      get: "/v1/presets"
    };
  }
  rpc UpdatePreset(UpdatePresetRequest) returns (Preset) {
    option (google.api.http) = {
      put: "/v1/presets/{id}"
      body: "*"
    };
  }
  rpc DeletePreset(DeletePresetRequest) returns (DeletePresetResponse) {
    option (google.api.http) = {
      delete: "/v1/presets/{id}"
    };
  }
}

// Common message types
message TranscodeJob {
  string id = 1 [(validate.rules).string.uuid = true];
  string input_path = 2;
  string output_path = 3;
  string preset_id = 4 [(validate.rules).string.uuid = true];
  TranscodeStatus status = 5;
  float progress = 6;
  string error_message = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.Timestamp completed_at = 10;
}

message Preset {
  string id = 1 [(validate.rules).string.uuid = true];
  string name = 2 [(validate.rules).string.min_len = 1];
  string description = 3;
  VideoSettings video = 4;
  AudioSettings audio = 5;
  ContainerSettings container = 6;
  bool enabled = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message VideoSettings {
  string codec = 1;
  int32 width = 2;
  int32 height = 3;
  int32 bitrate = 4;
  float framerate = 5;
  string profile = 6;
  string level = 7;
  map<string, string> additional_settings = 8;
}

message AudioSettings {
  string codec = 1;
  int32 bitrate = 2;
  int32 channels = 3;
  int32 sample_rate = 4;
  map<string, string> additional_settings = 5;
}

message ContainerSettings {
  string format = 1;
  map<string, string> additional_settings = 2;
}

enum TranscodeStatus {
  TRANSCODE_STATUS_UNSPECIFIED = 0;
  TRANSCODE_STATUS_PENDING = 1;
  TRANSCODE_STATUS_PROCESSING = 2;
  TRANSCODE_STATUS_COMPLETED = 3;
  TRANSCODE_STATUS_FAILED = 4;
  TRANSCODE_STATUS_CANCELLED = 5;
}

// Transcode job request/response messages
message CreateTranscodeJobRequest {
  string input_path = 1;
  string output_path = 2;
  string preset_id = 3 [(validate.rules).string.uuid = true];
}

message GetTranscodeJobRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message ListTranscodeJobsRequest {
  int32 page_size = 1 [(validate.rules).int32.gt = 0];
  string page_token = 2;
  TranscodeStatus status = 3;
}

message ListTranscodeJobsResponse {
  repeated TranscodeJob jobs = 1;
  string next_page_token = 2;
}

message CancelTranscodeJobRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message DeleteTranscodeJobRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message DeleteTranscodeJobResponse {}

// Preset request/response messages
message CreatePresetRequest {
  string name = 1 [(validate.rules).string.min_len = 1];
  string description = 2;
  VideoSettings video = 3;
  AudioSettings audio = 4;
  ContainerSettings container = 5;
}

message GetPresetRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message ListPresetsRequest {
  int32 page_size = 1 [(validate.rules).int32.gt = 0];
  string page_token = 2;
  bool enabled = 3;
}

message ListPresetsResponse {
  repeated Preset presets = 1;
  string next_page_token = 2;
}

message UpdatePresetRequest {
  string id = 1 [(validate.rules).string.uuid = true];
  string name = 2 [(validate.rules).string.min_len = 1];
  string description = 3;
  VideoSettings video = 4;
  AudioSettings audio = 5;
  ContainerSettings container = 6;
  bool enabled = 7;
}

message DeletePresetRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message DeletePresetResponse {} 